syntax = "proto3";

package question;

option go_package = "github.com/amagana8/trivia-games/backend/pkg/pb";

service QuestionService {
    rpc CreateQuestion(CreateQuestionRequest) returns (Question);
    rpc GetQuestion(QuestionId) returns (Question);
    rpc GetQuestions(GetQuestionsRequest) returns (QuestionList);
    rpc GetQuestionsByAuthorId(GetQuestionsByAuthorIdRequest) returns (QuestionList);
    rpc GetAllQuestions(GetAllQuestionsRequest) returns (QuestionList);
    rpc UpdateQuestion(UpdateQuestionRequest) returns (Question);
    rpc DeleteQuestion(DeleteQuestionRequest) returns (DeleteQuestionResponse);
}

message CreateQuestionRequest {
    string authorId = 1;
    string query = 2;
    string answer = 3;
    Media embed = 4;
}

message UpdateQuestionRequest {
    string questionId = 1;
    string query = 3;
    string answer = 4;
    Media embed = 5;
    string authorId = 6;
}

message Question {
    string questionId = 1;
    string authorId = 2;
    string query = 3;
    string answer = 4;
    Media embed = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message QuestionId {
    string questionId = 1;
}

message GetQuestionsByAuthorIdRequest {
    string authorId = 1;
}

message GetAllQuestionsRequest {}

message GetQuestionsRequest {
    repeated string questionIds = 1;
}

message DeleteQuestionRequest {
    string questionId = 1;
    string authorId = 2;
}

message QuestionList {
    repeated Question questions = 1;
}

message Media {
    string url = 1;
    MediaType type = 2;
}

message DeleteQuestionResponse {}

enum MediaType {
    UNDEFINED = 0;
    IMAGE = 1;
    VIDEO = 2;
    AUDIO = 3;
}
